--- a/app/package.json
+++ b/app/package.json
@@ -9,11 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dxos/client": "^0.7.4",
     "@lit-protocol/contracts": "^0.0.74",
     "@lit-protocol/crypto": "^7.0.0",
     "@lit-protocol/encryption": "^7.0.0",
     "@lit-protocol/lit-node-client": "^7.0.0",
-    "@noble/secp256k1": "^2.1.0",
+    "@lo-fi/local-vault": "^0.17.1",
+    "@lo-fi/webauthn-local-client": "^0.2000.0",
+    "@noble/secp256k1": "^2.2.3",
     "@popperjs/core": "^2.11.8",
     "@reown/appkit": "^1.5.3",
     "@reown/appkit-adapter-wagmi": "^1.5.3",
@@ -22,21 +25,28 @@
     "assert": "^2.1.0",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
+    "buckitup-sdk": "./src/libs/buckitup-sdk-0.0.24.tgz",
     "buffer": "^6.0.3",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "eth-crypto": "^2.7.0",
     "ethers": "^5.7.2",
+    "html5-qrcode": "^2.3.8",
+    "i": "^0.3.7",
+    "jssha": "^3.3.1",
     "mitt": "^3.0.1",
+    "npm": "^11.1.0",
     "pinia": "^2.3.0",
+    "qrcode": "^1.5.4",
     "shamirs-secret-sharing": "^2.0.0",
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.15.2",
     "util": "^0.12.5",
     "viem": "^2.21.53",
-    "vite-plugin-node-polyfills": "^0.22.0",
+    "vite-plugin-top-level-await": "^1.4.4",
+    "vite-plugin-wasm": "^3.4.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "buckitup-sdk": "./src/libs/buckitup-sdk-0.0.24.tgz"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
@@ -51,6 +61,6 @@
     "ssh2-sftp-client": "^11.0.0",
     "stream-browserify": "^3.0.0",
     "vite": "^6.0.1",
-    "vite-plugin-node-polyfills": "^0.22.0"
+    "vite-plugin-node-polyfills": "^0.23.0"
   }
 }
